--- a/paper_fianal.Rmd
+++ b/paper_fianal.Rmd
@@ -1,7 +1,7 @@
 ---
-title: 'DIFICULTAD DE LOS ALUMNOS DE INGENIERÍA EN SISTEMAS PARA SER ACEPTADOS EN SUPRIMERA OPCIÓN DE PRÁCTICA PROFESIONAL'
+title: 'DIFICULTAD DE LOS ALUMNOS DE INGENIERÍA EN SISTEMAS PARA SER ACEPTADOS EN SU PRIMERA OPCIÓN DE PRÁCTICA PROFESIONAL'
 author: ''
-date: ''
+date: '16 de mayo 2020'
 output:
 html_document: default
 ---
